# burn

./: Cargo.toml  README.md
backend-comparison/: Cargo.toml  README.md
backend-comparison/benches/: matmul.rs
backend-comparison/src/: lib.rs
backend-comparison/src/burnbenchapp/: base.rs
burn-ndarray/src/: tensor.rs
crates/burn/: Cargo.toml
crates/burn-compute/src/memory_management/: cached.rs  dynamic.rs  mod.rs
crates/burn-compute/src/storage/: base.rs
crates/burn-core/: Cargo.toml
crates/burn-core/src/: backend.rs  lib.rs
crates/burn-cube-macros/src/: analyzer.rs
crates/burn-cube-macros/src/codegen_function/: branch.rs  variable.rs
crates/burn-cube/src/: prelude.rs
crates/burn-cube/tests/: mod.rs
crates/burn-cubecl/src/kernel/reduce/: tune.rs
crates/burn-cuda/src/: lib.rs
crates/burn-cuda/src/compiler/: shader.rs
crates/burn-jit/: Cargo.toml
crates/burn-jit/src/: lib.rs  tune_key.rs
crates/burn-jit/src/fusion/: base.rs
crates/burn-jit/src/fusion/on_write/: builder.rs  io.rs  ir.rs  kernel.rs  trace.rs  trace_builder.rs
crates/burn-jit/src/kernel/conv/: col2im.rs  conv2d_.rs  conv3d.rs  conv_transpose2d.rs  conv_transpose3d.rs  conv_transposed2d.rs  deform_conv_transpose2d.rs  mod.rs  utils.rs
crates/burn-jit/src/kernel/conv/conv2d/: base.rs  gemm.rs  im2col.rs  implicit_gemm.rs  mod.rs
crates/burn-jit/src/kernel/conv/tune/: key.rs  (+2 more)
crates/burn-jit/src/kernel/index/: gather.rs
crates/burn-jit/src/kernel/matmul/: base.rs  mod.rs  test_utils.rs
crates/burn-jit/src/kernel/quantization/: data.rs  dequantize.rs  mod.rs  quantize.rs
crates/burn-jit/src/ops/: module_ops.rs
crates/burn-jit/src/template/: base.rs
crates/burn-jit/src/tests/: cube.wgsl  matmul.rs  matmul_cube.rs  other.wgsl
crates/burn-tch/src/: tensor.rs
crates/burn-tensor/: README.md
crates/burn-tensor/src/repr/: operation.rs
crates/burn-tensor/src/tensor/quantization/: scheme.rs
crates/burn-wgpu/: Cargo.toml  asdf.py
crates/burn-wgpu/src/: lib.rs
crates/burn-wgpu/src/compute/: server.rs
crates/burn/src/: lib.rs
examples/custom-image-dataset/: Cargo.toml  README.md
examples/custom-image-dataset/examples/: custom-image-dataset.rs
examples/mnist/: Cargo.toml  README.md
examples/mnist/examples/: mnist.rs
examples/simple-regression/: Cargo.toml  README.md
examples/simple-regression/examples/: regression.rs
examples/text-classification/: Cargo.toml  README.md
examples/text-classification/examples/: ag-news-infer.rs  ag-news-train.rs  db-pedia-infer.rs  db-pedia-train.rs
examples/text-generation/: Cargo.toml
xtask/src/commands/: test.rs
(+19 files in other folders)
