[package]
authors = ["nathanielsimard <nathaniel.simard.42@gmail.com>"]
edition.workspace = true
license.workspace = true
name = "mnist"
publish = false
version.workspace = true

[features]
default = ["burn/dataset", "burn/vision"]
ndarray = ["burn/ndarray"]
ndarray-blas-accelerate = ["burn/ndarray", "burn/accelerate"]
ndarray-blas-netlib = ["burn/ndarray", "burn/blas-netlib"]
ndarray-blas-openblas = ["burn/ndarray", "burn/openblas"]
libtorch-cpu = ["burn/libtorch"]
libtorch-gpu = ["burn/libtorch"]
wgpu = ["burn/wgpu"]

[dependencies]
burn = { path = "../../crates/burn", features = ["train"] }

# Serialization
log = { workspace = true }
serde = { workspace = true, features = ["std", "derive"] }
