[package]
authors = ["nathanielsimard <nathaniel.simard.42@gmail.com>"]
edition.workspace = true
license.workspace = true
name = "text-classification"
publish = false
version.workspace = true

[features]
default = ["burn/dataset", "burn/sqlite-bundled"]
f16 = []
ndarray = ["burn/ndarray"]
ndarray-blas-accelerate = ["burn/ndarray", "burn/accelerate"]
ndarray-blas-netlib = ["burn/ndarray", "burn/blas-netlib"]
ndarray-blas-openblas = ["burn/ndarray", "burn/openblas"]
libtorch-cpu = ["burn/libtorch"]
libtorch-gpu = ["burn/libtorch"]
wgpu = ["burn/wgpu"]
cuda = ["burn/cuda"]

[dependencies]
# Burn
burn = { path = "../../crates/burn", features = [
    "train",
    "ndarray",
    "std",
    "metrics",
    "autotune",
    "fusion",
    "default",
], default-features = false }

# Tokenizer
tokenizers = { version = "0.20.1", default-features = false, features = [
  "onig",
  "http",
] }

# Utils
derive-new = { workspace = true }
serde = { workspace = true, features = ["std", "derive"] }
